# Go-Marlin

./: .gitignore  Makefile  README.md  go.mod  main.go  marlin.go
lib/: marlin_zsk.c  marlin_zsk.h
marlin/: data.go  echain.go  marlin.go  zebralancer.go
marlin_zsk/: Cargo.toml  README.md
marlin_zsk/src/: crypto.rs  crypto_test.rs  lib.rs  main.rs  mask.rs  mask_test.rs  test.rs  utils.rs  zebralancer.rs
