[package]
name = "marlin_zsk"
version = "0.1.0"
authors = ["heng <awd1232009@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-marlin = {version = "^0.3.0"}
ark-poly-commit = { version = "^0.3.0"}
ark-bls12-381 = { version = "^0.3.0", features = ["curve"] }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-poly = { version = "^0.3.0" }
ark-ff = { version = "^0.3.0" }
ark-relations = { version = "^0.3.0" }
ark-std = { version = "^0.3.0" }
blake2 = { version = "0.9" }
libc = { version = "^0.2"}

[lib]
crate-type = ["cdylib"]
